# SABER

./: CMakeLists.txt  DeepQLearning_multi.py  DeepQLearning_multi_unified.py  LICENSE  ML_interface.py  MPC_uav_Simple.py  MPC_ugv_Simple.py  README.md  ROS_interface.py  SMPC_uav.py  SMPC_ugv.py  SMPC_ugv_test.py  covariance_scaler.pkl  package.xml  play1.sh  play2.py  play3.py  play_drone.sh  predict_covariance.py  rnn.h5  rnn.ipynb  rnn.py  rnn_2.h5  sabr_gazebo_collect.launch  sabr_gazebo_drone.launch  sabr_gazebo_map.launch  save_map.sh  setup.py
DQN_SABR/: DQN_test.py  SMPC_uav.py  SMPC_ugv.py  checkpoint.pth  dqn_agent.py  dqn_main.py  model.py
DQN_SABR/dqn_models/: checkpoint0.pth
DQN_SABR/gym-dqn/: setup.py
DQN_SABR/gym-dqn/gym_dqn/: __init__.py
DQN_SABR/gym-dqn/gym_dqn.egg-info/: PKG-INFO  SOURCES.txt
DQN_SABR/gym-dqn/gym_dqn/envs/: __init__.py  dqn_env.py
DQN_SABR_PREV/: DQN_test.py  dqn_agent.py  dqn_main.py  model.py
DQN_SABR_PREV/dqn_models/: checkpoint0.pth  checkpoint1.pth  checkpoint2.pth  checkpoint3.pth  checkpoint4.pth  checkpoint5.pth
DQN_SABR_PREV/gym-dqnprev/: setup.py
DQN_SABR_PREV/gym-dqnprev/gym_dqnprev/: __init__.py
DQN_SABR_PREV/gym-dqnprev/gym_dqnprev.egg-info/: PKG-INFO  SOURCES.txt
DQN_SABR_PREV/gym-dqnprev/gym_dqnprev/envs/: __init__.py  dqnprev_env.py
launch/: sabr_gazebo_collect.launch  sabr_gazebo_drone.launch  sabr_gazebo_map.launch  sabr_gazebo_ugv_uav.launch
maps/: map1.pgm  map1.yaml
rnn_models/: covariance_scaler.pkl  pf_SLAM.h5
rviz/: sabr_xivo.rviz
scripts/: SABER.py  play2.py  play3.py
src/sabr_mpc/: MPC_ugv_Simple.py
src/sabr_pkg/: MPC_ugv_Simple.py  ROS_interface.py  ROS_interface_ugv_uav.py  SABR.py  SMPC_uav.py  SMPC_uav_new.py  SMPC_ugv.py  __init__.py
worlds/: complex_results.world  optimal_results.world  safety_results.world  world1.world  world_cubeUGV.world  world_cube_cylinderUAV.world  world_cube_cylinderUAVnew.world  world_cube_cylinderUGV.world  world_cylinderUGV.world  world_distUGV.world  world_drone.world  world_featuresUGV.world  world_fun.world  world_results_complex.world  world_results_optimality.world  world_results_safety.world
xivo_cfg/: hector_kinect.json
